ClosestPair and also added bench